samples/mfc/occtdemo/Common/WNT/OCCDemoDoc.cpp
@@ -46,7 +46,7 @@ COCCDemoDoc::COCCDemoDoc()
 	Handle(Graphic3d_WNTGraphicDevice) theGraphicDevice = 
 		((COCCDemoApp*)AfxGetApp())->GetGraphicDevice();
 
-	myViewer = new V3d_Viewer(theGraphicDevice,(short *) "Visu3D");
+	myViewer = new V3d_Viewer(theGraphicDevice,(Standard_ExtString )"Visu3D");
 	myViewer->SetDefaultLights();
 	myViewer->SetLightOn();
   myViewer->SetDefaultBackgroundColor(Quantity_TOC_RGB, 0.,0.,0.);
